--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,11 +9,77 @@
 // Be sure that you only ever include this mixin once!
 @include mat.core();
 
+$custom-primary-palette: (
+    50 : #fbe1e0,
+    100 : #f6b4b3,
+    200 : #f08380,
+    300 : #ea514d,
+    400 : #e62b26,
+    500 : #e10600,
+    600 : #dd0500,
+    700 : #d90400,
+    800 : #d50300,
+    900 : #cd0200,
+    A100 : #fff5f5,
+    A200 : #ffc2c2,
+    A400 : #ff8f8f,
+    A700 : #ff7575,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #ffffff,
+        400 : #ffffff,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
+$custom-accent-palette: (
+  50 : #e6e6e6,
+  100 : #c1c1c1,
+  200 : #989898,
+  300 : #6e6e6e,
+  400 : #4f4f4f,
+  500 : #303030,
+  600 : #2b2b2b,
+  700 : #242424,
+  800 : #1e1e1e,
+  900 : #131313,
+  A100 : #ef6c6c,
+  A200 : #ea3e3e,
+  A400 : #f50000,
+  A700 : #db0000,
+  contrast: (
+      50 : #000000,
+      100 : #000000,
+      200 : #000000,
+      300 : #ffffff,
+      400 : #ffffff,
+      500 : #ffffff,
+      600 : #ffffff,
+      700 : #ffffff,
+      800 : #ffffff,
+      900 : #ffffff,
+      A100 : #000000,
+      A200 : #ffffff,
+      A400 : #ffffff,
+      A700 : #ffffff,
+  )
+);
+
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$formula-one-primary: mat.define-palette(mat.$indigo-palette);
-$formula-one-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$formula-one-primary: mat.define-palette($custom-primary-palette);
+$formula-one-accent: mat.define-palette($custom-accent-palette, 500);
 
 // The warn palette is optional (defaults to red).
 $formula-one-warn: mat.define-palette(mat.$red-palette);
