--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,5 @@
-
-// Custom Theming for Angular Material
-// For more information: https://material.angular.io/guide/theming
+// Custom Theme Configuration
 @use '@angular/material' as mat;
-// Plus imports for other components in your app.
-
-// Include the common styles for Angular Material. We include this here so that you only
-// have to load a single css file for Angular Material in your app.
-// Be sure that you only ever include this mixin once!
 @include mat.core();
 
 $custom-primary-palette: (
@@ -75,17 +68,10 @@ $custom-accent-palette: (
   )
 );
 
-// Define the palettes for your theme using the Material Design palettes available in palette.scss
-// (imported above). For each palette, you can optionally specify a default, lighter, and darker
-// hue. Available color palettes: https://material.io/design/color/
 $formula-one-primary: mat.define-palette($custom-primary-palette);
 $formula-one-accent: mat.define-palette($custom-accent-palette, 500);
-
-// The warn palette is optional (defaults to red).
 $formula-one-warn: mat.define-palette(mat.$red-palette);
 
-// Create the theme object. A theme consists of configurations for individual
-// theming systems such as "color" or "typography".
 $formula-one-theme: mat.define-light-theme((
   color: (
     primary: $formula-one-primary,
@@ -94,12 +80,8 @@ $formula-one-theme: mat.define-light-theme((
   )
 ));
 
-// Include theme styles for core and each component used in your app.
-// Alternatively, you can import and @include the theme mixins for each component
-// that you are using.
 @include mat.all-component-themes($formula-one-theme);
 
-/* You can add global styles to this file, and also import other style files */
-
+// Global Styles
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
