--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,1 +1,11 @@
-<p>header works!</p>
+<header>
+    <mat-toolbar class="max-width" color="primary">
+        <mat-toolbar-row>
+            <h1>Formula One</h1>
+            <section class="back-forth-navigation-btns">
+                <mat-icon (click)="location.back()" matTooltip="Back">keyboard_arrow_left</mat-icon>
+                <mat-icon (click)="location.forward()" matTooltip="Forward">keyboard_arrow_right</mat-icon>
+            </section>
+        </mat-toolbar-row>
+    </mat-toolbar>
+</header>
