--- a/src/styles.scss
+++ b/src/styles.scss
@@ -85,3 +85,8 @@ $formula-one-theme: mat.define-light-theme((
 // Global Styles
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+// Angular Material Overwrites
+.mat-typography p {
+  margin: 0 ;
+}
