feat: On Formula One h1 click navigate to home page

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -9,6 +9,10 @@ header {
     padding: 0;
 }
 
+h1 {
+    cursor: pointer;
+}
+
 .back-forth-navigation-btns {
     @include flex(row, nowrap, center, center);
     mat-icon {
