feat: Change header of home page depending on toggle

--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,1 +1,2 @@
-<app-toggle></app-toggle>
+<app-toggle (optionHandler)="option = $event"></app-toggle>
+<h2 class="max-width">{{ option }} Standings</h2>
