feat: Add table component and use it in home page

--- a/src/app/modules/home/pages/home/home.component.html
+++ b/src/app/modules/home/pages/home/home.component.html
@@ -1,2 +1,3 @@
 <app-toggle (optionHandler)="option = $event"></app-toggle>
 <h2 class="max-width">{{ option }} Standings</h2>
+<app-table></app-table>
