--- a/src/app/modules/home/components/table/table.component.html
+++ b/src/app/modules/home/components/table/table.component.html
@@ -1,1 +1,52 @@
-<p>table works!</p>
+<section class="max-width table">
+    <mat-form-field appearance="standard">
+        <mat-label>Filter</mat-label>
+        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" [(ngModel)]="filterValue" autocomplete="off">
+    </mat-form-field>
+      
+    <section class="mat-elevation-z8 table-container">
+        <table mat-table [dataSource]="dataSource" matSort>
+            <ng-container matColumnDef="position">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Position</th>
+                <td mat-cell *matCellDef="let row">{{ row['position'] }} </td>
+            </ng-container>
+        
+            <ng-container matColumnDef="name" *ngIf="option === 'Driver'">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
+                <td mat-cell *matCellDef="let row">{{ row['Driver']['givenName'] }} {{ row['Driver']['familyName'] }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="nationality" *ngIf="option === 'Constructor'">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Nationality</th>
+                <td mat-cell *matCellDef="let row">{{ row['Constructor']['nationality'] }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="constructor" *ngIf="option === 'Driver'">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Constructor</th>
+                <td mat-cell *matCellDef="let row">{{ row['Constructors'][0]['name'] }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="constructor" *ngIf="option === 'Constructor'">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Constructor</th>
+                <td mat-cell *matCellDef="let row">{{ row['Constructor']['name'] }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="points">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Points</th>
+                <td mat-cell *matCellDef="let row">{{ row['points'] }}</td>
+            </ng-container>
+
+            <ng-container matColumnDef="wins">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header>Wins</th>
+                <td mat-cell *matCellDef="let row">{{ row['wins'] }}</td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        
+            <tr class="mat-row" *matNoDataRow>
+                <td class="mat-cell" colspan="4">No data matching the filter "{{ filterValue }}"</td>
+            </tr>
+        </table>
+    </section>      
+</section>
