--- a/src/app/modules/home/pages/home/home.component.scss
+++ b/src/app/modules/home/pages/home/home.component.scss
@@ -1,12 +1,21 @@
 @import 'src/assets/scss/main';
 
-h2 {
+h2, p {
     color: $white;
+    margin-bottom: 1rem !important;
+}
+
+p {
+    font-size: 0.9rem;
 }
 
 @media(min-width: 768px){
     h2 {
         font-size: 1.5rem;
+    }
+
+    p {
+        font-size: 1rem;
     }
 }
 
