refactor: Change placeholder of filter in home page

--- a/src/app/modules/home/components/table/table.component.html
+++ b/src/app/modules/home/components/table/table.component.html
@@ -1,7 +1,7 @@
 <section class="max-width table">
     <mat-form-field appearance="standard">
         <mat-label>Filter</mat-label>
-        <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" [(ngModel)]="filterValue" autocomplete="off">
+        <input matInput (keyup)="applyFilter($event)" placeholder="Your term..." [(ngModel)]="filterValue" autocomplete="off">
     </mat-form-field>
       
     <section class="mat-elevation-z8 table-container">
