--- a/src/assets/scss/_global-styles.scss
+++ b/src/assets/scss/_global-styles.scss
@@ -1,4 +1,4 @@
-h2, p {
+h2, h3, p {
   color: white;
 }
 
@@ -6,6 +6,10 @@ h2, p {
 @media(min-width: 768px){
     h2 {
         font-size: 1.5rem;
+    }
+
+    h3 {
+        font-size: 1.2rem;
     }
 }
 
