feat: Remove gap from grid reusable class so every component that uses it have its own gap and add grid auto rows to auto

--- a/src/app/modules/drivers/pages/drivers/drivers.component.scss
+++ b/src/app/modules/drivers/pages/drivers/drivers.component.scss
@@ -1,5 +1,9 @@
 @import 'src/assets/scss/main';
 
+.grid {
+    gap: 20px;
+}
+
 @media(min-width: 1024px) {
     h2 {
         margin-bottom: 1.5rem;
