--- a/src/app/modules/drivers/components/driver/driver.component.scss
+++ b/src/app/modules/drivers/components/driver/driver.component.scss
@@ -1,6 +1,6 @@
 @import 'src/assets/scss/main';
 
-h3 {
+.driver-name {
     padding-left: 0.5rem;
     border-left: 2px solid $primary;
 }
@@ -10,6 +10,22 @@ p {
     &:not(:last-of-type) {
         margin-bottom: 0.5rem;
     }
+}
+
+.details {
+    margin-bottom: 2rem;
+}
+
+.circuit-results-header {
+    padding: 0.5rem;
+    background: lighten($accent, 5%);
+    border-radius: 4px;
+    margin-bottom: 2rem;
+}
+
+.grid {
+    gap: 60px 20px;
+    margin-bottom: 1rem;
 }
 
 @media(min-width: 768px) {
