--- a/src/assets/scss/_global-styles.scss
+++ b/src/assets/scss/_global-styles.scss
@@ -2,6 +2,14 @@ h2, h3, p {
   color: white;
 }
 
+li {
+    list-style-type: none;
+}
+
+a {
+    text-decoration: none;
+}
+
 // Media
 @media(min-width: 768px){
     h2 {
