--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -2,9 +2,20 @@
     <mat-toolbar class="max-width" color="primary">
         <mat-toolbar-row>
             <h1 (click)="router.navigate(['/'])">Formula One</h1>
-            <section class="back-forth-navigation-btns">
-                <mat-icon (click)="location.back()" matTooltip="Back">keyboard_arrow_left</mat-icon>
-                <mat-icon (click)="location.forward()" matTooltip="Forward">keyboard_arrow_right</mat-icon>
+            <section class="navigation">
+                <ng-container *ngIf="!isInMobile">
+                    <app-navigation></app-navigation>
+                </ng-container>
+                <button mat-icon-button *ngIf="isInMobile" [matMenuTriggerFor]="menu">
+                    <mat-icon>menu</mat-icon>
+                </button>
+                <mat-menu #menu="matMenu">
+                    <app-navigation></app-navigation>
+                </mat-menu>
+                <section class="back-forth-navigation-btns">
+                    <mat-icon (click)="location.back()" matTooltip="Back">keyboard_arrow_left</mat-icon>
+                    <mat-icon (click)="location.forward()" matTooltip="Forward">keyboard_arrow_right</mat-icon>
+                </section>
             </section>
         </mat-toolbar-row>
     </mat-toolbar>
