--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,7 @@
     <router-outlet></router-outlet>
 </main>
 <app-footer></app-footer>
+
+<section class="go-top-arrow-container" appGoTop>
+    <mat-icon>arrow_upward</mat-icon>
+</section>
