--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,28 @@ main {
     background: $accent;
 }
 
+.go-top-arrow-container {
+    @include flex(row, nowrap, center, center);
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    padding: 0.3rem;
+    background: $primary;
+    border: 1px solid $white;
+    border-radius: 4px;
+    cursor: pointer;
+    opacity: 0;
+    z-index: -1;
+    transition: .4s ease-in-out;
+    &.show {
+        opacity: 1;
+        z-index: 1;
+    }
+    mat-icon {
+        color:$white;
+    }
+}
+
 @media(min-width: 600px) {
     main {
         min-height: calc(100vh - 109.59px);
