feat: Add smooth scroll behavior

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -82,6 +82,10 @@ $formula-one-theme: mat.define-light-theme((
 
 @include mat.all-component-themes($formula-one-theme);
 
+* {
+  scroll-behavior: smooth;
+}
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
