--- a/src/app/modules/home/components/table/table.component.scss
+++ b/src/app/modules/home/components/table/table.component.scss
@@ -8,6 +8,10 @@
     width: 100%;
 }
 
+.table-container {
+    overflow-y: auto;
+}
+
 .mat-table {
     width: 100%;
     background: lighten($accent, 5%);
