--- a/src/app/modules/drivers/pages/drivers/drivers.component.html
+++ b/src/app/modules/drivers/pages/drivers/drivers.component.html
@@ -1,6 +1,6 @@
 <section class="max-width pad">
-    <h2>Drivers List</h2>
-    <section class="grid">
+    <h2 class="constructors-drivers">Drivers List</h2>
+    <section class="grid constructors-drivers">
         <article *ngFor="let driver of drivers$ | async" class="box" 
         (click)="router.navigate(['/drivers', driver.driverId])">
             <span>
