--- a/src/app/modules/constructors/components/constructor/constructor.component.html
+++ b/src/app/modules/constructors/components/constructor/constructor.component.html
@@ -9,8 +9,8 @@
     </section>
     <h3 class="results-header">CIRCUIT RESULTS</h3>
     <section class="grid">
-        <!-- <ng-container *ngFor="let result of results">
-            <app-driver-results [race]="result"></app-driver-results>
-        </ng-container> -->
+        <ng-container *ngFor="let result of results">
+            <app-constructor-results [race]="result"></app-constructor-results>
+        </ng-container>
     </section>
 </article>
