--- a/src/styles.scss
+++ b/src/styles.scss
@@ -101,3 +101,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .mat-form-field-appearance-standard .mat-form-field-underline {
   background-color: white;
 }
+
+.mat-card-header-text {
+  color: white !important;
+  margin: 0 !important;
+}
