--- a/src/assets/scss/_reusable-classes.scss
+++ b/src/assets/scss/_reusable-classes.scss
@@ -67,6 +67,9 @@
         background: $accent;
         position: relative;
     }
+    .mat-card-header {
+        display: initial;
+    }
     .mat-card-title {
         padding-bottom: 12px;
         border-bottom: 1px solid lighten($accent, 5%);
