refactor: Change layout of constructor results card

--- a/src/app/modules/constructors/components/constructor-results/constructor-results.component.scss
+++ b/src/app/modules/constructors/components/constructor-results/constructor-results.component.scss
@@ -1,11 +1,19 @@
 @import 'src/assets/scss/main';
 
-.drivers > span {
-    margin-right: 0.5rem;
+.drivers {
+    & > span {
+        display: block;
+        &:first-of-type {
+            margin-bottom: 0.5rem;
+        }
+    }
 }
 
 .driver {
     background: lighten($accent, 5%);
     padding: 0.3rem;
     border-radius: 4px;
+    &:not(:last-of-type) {
+        margin-bottom: 0.3rem;
+    }
 }
