--- a/src/app/shared/components/circuit-results/circuit-results.component.html
+++ b/src/app/shared/components/circuit-results/circuit-results.component.html
@@ -9,6 +9,14 @@
           </mat-card-subtitle>
         </mat-card-header>
         <mat-card-content>
+          <p class="drivers" *ngIf="type === 'constructor'">
+              <span>Drivers:</span>
+              <ng-container *ngFor="let result of race.Results">
+                <span class="driver" (click)="router.navigate(['/drivers', result.Driver.driverId])">
+                  {{ result.Driver.givenName }} {{ result.Driver.familyName }}
+                </span>
+              </ng-container>
+          </p>  
           <p>Laps: {{ race.Results[0].laps }}</p>
           <p>Status: {{ race.Results[0].status }}</p>
           <p>Points: {{ race.Results[0].points }}</p>
