refactor: Move the logic from driver constructor component to constructor and driver components accordingly

--- a/src/app/modules/constructors/components/constructor/constructor.component.html
+++ b/src/app/modules/constructors/components/constructor/constructor.component.html
@@ -1,1 +1,1 @@
-<app-driver-constructor [type]="'constructor'"></app-driver-constructor>
+<app-driver-constructor [type]="'constructor'" [details]="details" [results]="results"></app-driver-constructor>
