--- a/src/app/modules/drivers/components/driver/driver.component.html
+++ b/src/app/modules/drivers/components/driver/driver.component.html
@@ -1,1 +1,1 @@
-<app-driver-constructor [type]="'driver'"></app-driver-constructor>
+<app-driver-constructor [type]="'driver'" [details]="details" [results]="results"></app-driver-constructor>
