feat: Reusable h2 in driver-constructor and constructors-drivers components

--- a/src/app/shared/components/driver-constructor/driver-constructor.component.html
+++ b/src/app/shared/components/driver-constructor/driver-constructor.component.html
@@ -1,5 +1,5 @@
 <article class="max-width pad">
-    <h2 class="details-header">Constructor Details</h2>
+    <h2 class="details-header">{{ type === 'driver' ? 'Driver' : 'Constructor' }} Details</h2>
     <section class="details">
         <h3 class="details-name">
             {{ type === 'constructor' ? details?.name : details?.givenName + " " + details?.familyName }}
