--- a/src/assets/scss/_global-styles.scss
+++ b/src/assets/scss/_global-styles.scss
@@ -24,7 +24,7 @@ a {
 @media(min-width: 1024px){
     h2 {
         font-size: 1.7rem;
-        &.constructors-drivers {
+        &.constructors-drivers-circuits-header {
             margin-bottom: 1.5rem;
         }
     }
