--- a/src/assets/scss/_reusable-classes.scss
+++ b/src/assets/scss/_reusable-classes.scss
@@ -91,6 +91,11 @@
             margin-bottom: 0.3rem;
         }
     }
+    a {
+        display: inline-block;
+        font-size: 0.9rem;
+        margin-top: 0.3rem;
+    }
 }
 
 @media(min-width: 768px) {
