--- a/src/app/shared/components/constructors-drivers/constructors-drivers.component.html
+++ b/src/app/shared/components/constructors-drivers/constructors-drivers.component.html
@@ -1,5 +1,5 @@
 <section class="max-width pad">
-    <h2 class="constructors-drivers">{{ type === 'drivers' ? 'Drivers' : 'Constructors' }} List</h2>
+    <h2 class="constructors-drivers-circuits-header">{{ type === 'drivers' ? 'Drivers' : 'Constructors' }} List</h2>
     <section class="grid constructors-drivers">
         <article *ngFor="let data of data$ | async" class="box" (click)="navigateTo(data)">
             <span>
