--- a/src/app/shared/components/navigation/navigation.component.html
+++ b/src/app/shared/components/navigation/navigation.component.html
@@ -6,5 +6,8 @@
         <li>
             <a routerLink="/constructors" routerLinkActive="active">Constructors</a>
         </li>
+        <li>
+            <a routerLink="/circuits" routerLinkActive="active">Circuits</a>
+        </li>
     </ul>
 </nav>
