--- a/src/app/shared/components/navigation/navigation.component.scss
+++ b/src/app/shared/components/navigation/navigation.component.scss
@@ -35,7 +35,7 @@ ul {
     ul {
         @include flex(row, nowrap, unset, center);
         li {
-            &:last-of-type {
+            &:not(:first-of-type) {
                 margin-left: 0.5rem;
             }
             &:not(:last-of-type) {
