--- a/src/app/shared/components/card/card.component.html
+++ b/src/app/shared/components/card/card.component.html
@@ -28,5 +28,8 @@
             <a [href]="data.url" target="_blank">Wikipedia</a>
           </ng-container>  
         </mat-card-content>
+        <mat-card-actions *ngIf="type === 'circuit'">
+          <button mat-raised-button color="primary">Circuit Location</button>
+        </mat-card-actions>
       </mat-card>
 </article>
