--- a/src/app/modules/circuits/components/circuit-location/circuit-location.component.html
+++ b/src/app/modules/circuits/components/circuit-location/circuit-location.component.html
@@ -1,7 +1,7 @@
 <h2 mat-dialog-title>{{ data.circuit }} Location</h2>
 <mat-dialog-content class="mat-typography">
-    <app-map></app-map>
+    <app-map [lat]="data.lat" [long]="data.long"></app-map>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Close</button>
+  <button mat-raised-button mat-dialog-close color="accent">Close</button>
 </mat-dialog-actions>
