refactor: Increase h1 font size after 768px and 102px and change styling of nav links for mobiles

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -37,3 +37,15 @@ button {
         }
     }
 }
+
+@media(min-width: 768px) {
+    h1 {
+        font-size: 1.5rem;
+    }
+}
+
+@media(min-width: 1024px) {
+    h1 {
+        font-size: 1.8rem;
+    }
+}
