refactor: Refactor img-container class width and height depending on image content

--- a/src/app/shared/components/constructors-drivers/constructors-drivers.component.html
+++ b/src/app/shared/components/constructors-drivers/constructors-drivers.component.html
@@ -3,7 +3,8 @@
     <section class="grid constructors-drivers">
         <article *ngFor="let data of data$ | async" class="box" (click)="navigateTo(data)">
             <section class="image-name-container">
-                <div class="img-container">
+                <div class="img-container" 
+                [ngStyle]="{ width: type === 'drivers' ? '45px' : '30px', height: type === 'drivers' ? '45px' : '30px'}">
                     <img src="assets/images/{{ type === 'drivers' ? data.driverId : data.constructorId }}.png" [alt]="(type === 'constructors' ? data.name : data.familyName) + (type === 'drivers' ? ' photo' : ' logo')" />
                 </div>
                 <span>
