--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header></app-header>
 <main>
+    <app-season-filter></app-season-filter>
     <router-outlet></router-outlet>
 </main>
 <app-footer></app-footer>
