--- a/src/app/modules/home/components/table/table.component.scss
+++ b/src/app/modules/home/components/table/table.component.scss
@@ -33,6 +33,13 @@ tr {
     }
 }
 
+.no-data {
+    font-size: 1.2rem;
+    text-align: center;
+    padding: 0.5rem 0;
+    background: lighten($accent, 5%);
+}
+
 @media(min-width: 1024px) {
     .table {
         padding-bottom:  2rem;
