--- a/src/app/modules/home/components/toggle/toggle.component.html
+++ b/src/app/modules/home/components/toggle/toggle.component.html
@@ -1,5 +1,5 @@
 <section class="max-width pad">
     <span class="driver-standings">Driver</span>
-    <mat-slide-toggle color="primary" (change)="onOptionChange($event)"></mat-slide-toggle>
+    <mat-slide-toggle color="primary" (change)="onOptionChange($event)" [checked]="checked"></mat-slide-toggle>
     <span class="constructor-standings">Constructor</span>
 </section>
