--- a/src/app/modules/home/components/table/table.component.html
+++ b/src/app/modules/home/components/table/table.component.html
@@ -1,5 +1,5 @@
 <section class="max-width table">
-    <ng-container *ngIf="dataSource.data.length > 0">
+    <ng-container *ngIf="!isLoading && dataSource.data.length > 0">
         <mat-form-field appearance="standard">
             <mat-label>Filter</mat-label>
             <input matInput (keyup)="applyFilter($event)" placeholder="Search..." [(ngModel)]="filterValue" autocomplete="off">
@@ -9,37 +9,37 @@
             <table mat-table [dataSource]="dataSource" matSort>
                 <ng-container matColumnDef="position">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Position</th>
-                    <td mat-cell *matCellDef="let row">{{ row['position'] }} </td>
+                    <td mat-cell *matCellDef="let row">{{ row?.position }} </td>
                 </ng-container>
                 
                 <ng-container matColumnDef="name" *ngIf="option === 'Driver'">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-                    <td mat-cell *matCellDef="let row">{{ row['Driver']['givenName'] }} {{ row['Driver']['familyName'] }}</td>
+                    <td mat-cell *matCellDef="let row">{{ row?.Driver?.givenName }} {{ row?.Driver?.familyName }}</td>
                 </ng-container>
                 
                 <ng-container matColumnDef="nationality" *ngIf="option === 'Constructor'">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Nationality</th>
-                    <td mat-cell *matCellDef="let row">{{ row['Constructor']['nationality'] }}</td>
+                    <td mat-cell *matCellDef="let row">{{ row?.Constructor?.nationality }}</td>
                 </ng-container>
                 
                 <ng-container matColumnDef="constructor" *ngIf="option === 'Driver'">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Constructor</th>
-                    <td mat-cell *matCellDef="let row">{{ row['Constructors'][0]['name'] }}</td>
+                    <td mat-cell *matCellDef="let row">{{ row?.Constructors && row?.Constructors[0]?.name }}</td>
                 </ng-container>
                 
                 <ng-container matColumnDef="constructor" *ngIf="option === 'Constructor'">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Constructor</th>
-                    <td mat-cell *matCellDef="let row">{{ row['Constructor']['name'] }}</td>
+                    <td mat-cell *matCellDef="let row">{{ row?.Constructor?.name }}</td>
                 </ng-container>
                 
                 <ng-container matColumnDef="points">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Points</th>
-                    <td mat-cell *matCellDef="let row">{{ row['points'] }}</td>
+                    <td mat-cell *matCellDef="let row">{{ row?.points }}</td>
                 </ng-container>
 
                 <ng-container matColumnDef="wins">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header>Wins</th>
-                    <td mat-cell *matCellDef="let row">{{ row['wins'] }}</td>
+                    <td mat-cell *matCellDef="let row">{{ row?.wins }}</td>
                 </ng-container>
                 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -51,5 +51,6 @@
             </table>
         </section>      
     </ng-container>
-    <p class="no-data" *ngIf="dataSource.data.length === 0">NO DATA FOUND</p>
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
+    <p class="no-data" *ngIf="!isLoading && dataSource.data.length === 0">NO DATA FOUND</p>
 </section>
