--- a/src/app/shared/components/season-filter/season-filter.component.html
+++ b/src/app/shared/components/season-filter/season-filter.component.html
@@ -1,4 +1,4 @@
-<section class="max-width">
+<section class="max-width" *ngIf="isFilterVisible$ | async">
     <mat-form-field appearance="standard">
         <mat-label>Year</mat-label>
         <mat-select [formControl]="yearControl">
