feat: Visualize results/points

--- a/src/app/shared/components/driver-constructor/driver-constructor.component.html
+++ b/src/app/shared/components/driver-constructor/driver-constructor.component.html
@@ -22,4 +22,6 @@
             <app-card [type]="type" [data]="result"></app-card>
         </ng-container>
     </section>
+    <h3>STATISTICS (points/circuit)</h3>
+    <app-statistics [type]="type" [results]="results"></app-statistics>
 </article>
