--- a/src/app/shared/components/driver-constructor/driver-constructor.component.scss
+++ b/src/app/shared/components/driver-constructor/driver-constructor.component.scss
@@ -1,5 +1,11 @@
 @import 'src/assets/scss/main';
 
+h3 {
+    padding: 0.5rem;
+    background: lighten($accent, 5%);
+    border-radius: 4px;
+}
+
 .details {
     p {
         &:last-of-type {
