refactor: Change styles of mobile menu

--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -17,6 +17,16 @@ h1 {
     @include flex(row, nowrap, unset, center);
 }
 
+::ng-deep .mat-menu-panel {
+    background: unset;
+}
+
+::ng-deep .mat-menu-content:not(:empty) {
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+    background: $accent;
+}
+
 button {
     margin-right: 1rem;
     background: transparent;
