--- a/src/app/shared/components/navigation/navigation.component.scss
+++ b/src/app/shared/components/navigation/navigation.component.scss
@@ -12,20 +12,16 @@ ul {
         text-align: center;
         width: 100%;
         cursor: pointer;
-        &:not(:last-of-type) {
-            margin-bottom: 0.5rem;
-        }
         a {
             display: inline-block;
             font-size: 1rem;
             text-align: center;
             width: 112px;
-            color: $primary;
-            background: $white !important;
-            padding: 0.3rem 0.5rem;
+            color: $white;
+            padding: 0.5rem;
             &.active {
-                color: $white;
-                background: $primary !important;
+                color: $primary;
+                background: $white !important;
             }
         }
     }
@@ -37,9 +33,6 @@ ul {
         li {
             &:not(:first-of-type) {
                 margin-left: 0.5rem;
-            }
-            &:not(:last-of-type) {
-                margin-bottom: 0;
             }
             a {
                 width: unset;
