feat: Add formula one logo in h1 and decrease size of h1

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,7 +1,10 @@
 <header>
     <mat-toolbar class="max-width" color="primary">
         <mat-toolbar-row>
-            <h1 (click)="router.navigate(['/'])">Formula One</h1>
+            <h1 (click)="router.navigate(['/'])">
+                <img src="assets/images/f1_logo.png" alt="formula one logo">
+                Formula One
+            </h1>
             <section class="navigation">
                 <ng-container *ngIf="!isInMobile">
                     <app-navigation></app-navigation>
