feat: Change accent palette

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -36,36 +36,36 @@ $custom-primary-palette: (
 );
 
 $custom-accent-palette: (
-  50 : #e6e6e6,
-  100 : #c1c1c1,
-  200 : #989898,
-  300 : #6e6e6e,
-  400 : #4f4f4f,
-  500 : #303030,
-  600 : #2b2b2b,
-  700 : #242424,
-  800 : #1e1e1e,
-  900 : #131313,
-  A100 : #ef6c6c,
-  A200 : #ea3e3e,
-  A400 : #f50000,
-  A700 : #db0000,
-  contrast: (
-      50 : #000000,
-      100 : #000000,
-      200 : #000000,
-      300 : #ffffff,
-      400 : #ffffff,
-      500 : #ffffff,
-      600 : #ffffff,
-      700 : #ffffff,
-      800 : #ffffff,
-      900 : #ffffff,
-      A100 : #000000,
-      A200 : #ffffff,
-      A400 : #ffffff,
-      A700 : #ffffff,
-  )
+  50 : #e4e4e5,
+    100 : #bcbcbe,
+    200 : #8f8f93,
+    300 : #626268,
+    400 : #414147,
+    500 : #1f1f27,
+    600 : #1b1b23,
+    700 : #17171d,
+    800 : #121217,
+    900 : #0a0a0e,
+    A100 : #5353ff,
+    A200 : #2020ff,
+    A400 : #0000ec,
+    A700 : #0000d3,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #ffffff,
+        400 : #ffffff,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #ffffff,
+        A200 : #ffffff,
+        A400 : #ffffff,
+        A700 : #ffffff,
+    )
 );
 
 $formula-one-primary: mat.define-palette($custom-primary-palette);
