--- a/src/app/shared/components/navigation/navigation.component.scss
+++ b/src/app/shared/components/navigation/navigation.component.scss
@@ -39,8 +39,9 @@ ul {
                 color: $white !important;
                 background: darken($primary, 10%) !important;
                 border-radius: 4px;
+                box-shadow: 0px 5px 5px -3px rgb(0 0 0 / 20%), 0px 8px 10px 1px rgb(0 0 0 / 14%), 0px 3px 14px 2px rgb(0 0 0 / 12%);
                 &.active {
-                    background: darken($primary, 20%) !important;
+                    background: $accent !important;
                 }
             }
         }
